fix(core/navigation): add gap-tight to option group for level 2 and 3

--- a/packages/core/src/navigation/_navigation-styles.scss
+++ b/packages/core/src/navigation/_navigation-styles.scss
@@ -388,6 +388,7 @@ $option-height: calc(spacing.semantic-variable(padding, vertical, tight) * 2 + #
     @include utils.reset();
 
     display: grid;
+    gap: spacing.semantic-variable(gap, tight);
   }
 
 
